2010-06-24  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h:
	* template.cpp|h: Change the template parsing mechanism a little
	bit, now the parser will give the template a callback function for
	parsing itself. This allows us the two different parsers to be
	transparent to the template.

2010-06-24  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (RenderCollection): Fixed a regression I
	introduced in rev 159440.

2010-06-24  Jackson Harper  <jackson@ximian.com>

	* dependencyobject.cpp|h: Rename this function so it makes a
	little more sense when being set in managed.
	* xaml.cpp: Renamed the setname function.

2010-06-24  Alan McGovern  <amcgovern@novell.com>

	* popup.h:
	* popup.cpp:
	* uielement.h: When a Popup is removed from the visual tree,
	  it needs to hide itself. Fixes drt 699.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: ProgressiveSource::CheckPendingReads: we can read if the
	entire file has been downloaded, even if the requested range isn't
	available.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp: Fix possible crash in debug spew.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp: HttpRequest::Open: don't make uris absolute using the xap
	location when in oob mode, but the source location. Fixes #8001.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp: Don't send -1 as the offset when writing data, not all
	consumers understands what -1 means.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* debug.h:
	* runtime.cpp|h: Add LOG_OOB support.

	* pal/pal.cpp:
	* pal/gtk/pal-gtk.cpp:
	* pal/gtk/install-dialog.cpp: Add oob debug spew.

2010-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (MultiScaleImage::ctor): Init n_downloading
	to 0.
	(CanDownloadMoreTiles): Check n_downloading < MAX_DOWNLOADERS
	rather than downloaders->len < MAX_DOWNLOADERS because the
	downloaders array can contain unused downloaders.